--- a/.github/workflows/gh-example.yml
+++ b/.github/workflows/gh-example.yml
@@ -9,6 +9,10 @@ jobs:
     # This job runs on Linux
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1.0.0
+
+      - uses: meeDamian/tag-suggestions@master
+
       # This step uses GitHub's hello-world-javascript-action: https://github.com/actions/hello-world-javascript-action
       - name: Hello world
         uses: actions/hello-world-javascript-action@v1
