--- a/.github/workflows/gh-example.yml
+++ b/.github/workflows/gh-example.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v1.0.0
 
       - uses: meeDamian/tag-suggestions@master
+        with:
+          tag: v0.0.2
 
       # This step uses GitHub's hello-world-javascript-action: https://github.com/actions/hello-world-javascript-action
       - name: Hello world
