--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -24,13 +24,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Does that work?
-      env:
-        AAA: aaa
-      run: echo ""
-
-    - run: echo "${AAA}"
-
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
@@ -61,7 +54,7 @@ jobs:
       uses: meeDamian/github-release@master
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 'v0.0.1-test-update'
+        tag: 'v0.0.2-test-update'
         commitish: ${{github.sha}}
         name: aaa
         body: aaa
@@ -72,11 +65,12 @@ jobs:
       uses: meeDamian/github-release@master
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 'v0.0.1-test-update'
+        tag: 'v0.0.2-test-update'
         name: bbb
         body: bbb
         draft: false
         prerelease: false
+        allow_override: true
 
 
 
