--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -56,8 +56,8 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: 'v0.0.2-test-update'
         commitish: ${{github.sha}}
-        name: aaa
-        body: aaa
+        name: ccc
+        body: ccc
         draft: true
         prerelease: true
 
@@ -66,8 +66,8 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: 'v0.0.2-test-update'
-        name: bbb
-        body: bbb
+        name: dddd
+        body: dddd
         draft: false
         prerelease: false
         allow_override: true
