--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -54,22 +54,20 @@ jobs:
       uses: meeDamian/github-release@master
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 'v0.0.3-test-update'
+        tag: 'v0.0.4-test-update'
         commitish: ${{github.sha}}
-        name: ccc
-        body: ccc
+        name: eeeee
+        body: ffffff
         draft: true
-        prerelease: true
 
     - name: Create release
       uses: meeDamian/github-release@master
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 'v0.0.3-test-update'
-        name: dddd
-        body: dddd
+        tag: 'v0.0.4-test-update'
+        name: ggggggg
+        body: hhhhhhhh
         draft: false
-        prerelease: false
         allow_override: true
 
 
