--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -58,7 +58,7 @@ jobs:
         commitish: ${{ github.sha }}
         name: 1
         body: 11
-        draft: false
+        prerelease: false
 
     - name: Update release
       uses: meeDamian/github-release@master
@@ -67,7 +67,7 @@ jobs:
         tag: 'v0.0.7-test-update'
         name: 2
         body: 22
-        draft: true
+        prerelease: true
         allow_override: true
 
 
