--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -54,21 +54,27 @@ jobs:
       uses: meeDamian/github-release@master
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 'v0.0.9-test-update'
+        tag: 'v0.0.10-test-update'
         commitish: ${{ github.sha }}
-        name: 89
-        body: 889
+        name: 8910
+        body: 88910
         prerelease: true
+
+    - name: Print Release
+      run: curl -s https://api.github.com/repos/meeDamian/docker-ci/releases/tags/v0.0.10-test-update | jq '. | { id, tag_name, name, body, prerelease }'
 
     - name: Update release
       uses: meeDamian/github-release@master
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 'v0.0.9-test-update'
-        name: 889
-        body: 8889
+        tag: 'v0.0.10-test-update'
+        name: 88910
+        body: 888910
         prerelease: false
         allow_override: true
+
+    - name: Print Release
+      run: curl -s https://api.github.com/repos/meeDamian/docker-ci/releases/tags/v0.0.10-test-update | jq '. | { id, tag_name, name, body, prerelease }'
 
 
 
