--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -54,27 +54,31 @@ jobs:
       uses: meeDamian/github-release@master
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 'v0.0.10-test-update'
+        tag: 'v0.0.11-test-update'
         commitish: ${{ github.sha }}
-        name: 8910
-        body: 88910
+        name: 11
+        body: 11
         prerelease: true
 
     - name: Print Release
-      run: curl -s https://api.github.com/repos/meeDamian/docker-ci/releases/tags/v0.0.10-test-update | jq '. | { id, tag_name, name, body, prerelease }'
+      run: >
+        curl -s https://api.github.com/repos/meeDamian/docker-ci/releases/tags/v0.0.11-test-update
+        | jq '. | { id, tag_name, name, body, prerelease }'
 
     - name: Update release
       uses: meeDamian/github-release@master
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: 'v0.0.10-test-update'
-        name: 88910
-        body: 888910
+        tag: 'v0.0.11-test-update'
+        name: 8891011
+        body: 88891011
         prerelease: false
         allow_override: true
 
     - name: Print Release
-      run: curl -s https://api.github.com/repos/meeDamian/docker-ci/releases/tags/v0.0.10-test-update | jq '. | { id, tag_name, name, body, prerelease }'
+      run: >
+        curl -s https://api.github.com/repos/meeDamian/docker-ci/releases/tags/v0.0.11-test-update
+        | jq '. | { id, tag_name, name, body, prerelease }'
 
 
 
