--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: check job env var
-      run: echo "~~ ${VERSION} ~~"
+      run: eval ${VERSION}
 
 #    - name: Dump GitHub context
 #      env:
