--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -27,7 +27,9 @@ jobs:
 
     - name: Try preparing env
       id: env
-      run: echo ::set-output name=version::"$(echo "${GITHUB_REF}" | awk -F/ '{print $NF}')"
+      run: |
+        echo "${GITHUB_REF}"
+        echo ::set-output name=version::"$(echo "${GITHUB_REF}" | awk -F/ '{print $NF}')"
 
     - name: Check job env var
       run: echo ${{steps.xxx.outputs.yyy}}
