--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,40 +25,44 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Try preparing env
-      id: env
+#    - name: Try preparing env
+#      id: env
+#      run: |
+#        echo "${GITHUB_REF}"
+#        echo ::set-output name=version::"$(echo "${GITHUB_REF}" | awk -F/ '{print $NF}')"
+#
+#    - name: Check job env var
+#      run: echo ${{steps.env.outputs.version}}
+    - name: Setup environment
       run: |
-        echo "${GITHUB_REF}"
-        echo ::set-output name=version::"$(echo "${GITHUB_REF}" | awk -F/ '{print $NF}')"
+        echo ::set-env name=DOCKER_USER::"${GITHUB_ACTOR,,}"
+        echo ::set-env name=COMMIT_HASH::"${GITHUB_SHA:0:16}"
+        echo ::set-env name=SLUG::"$(echo "${GITHUB_REPOSITORY,,}" | sed 's/docker-//')"
 
-    - name: Check job env var
-      run: echo ${{steps.env.outputs.version}}
-
-
-#    - name: Dump GitHub context
-#      env:
-#        GITHUB_CONTEXT: ${{ toJson(github) }}
-#      run: echo "$GITHUB_CONTEXT"
-#    - name: Dump job context
-#      env:
-#        JOB_CONTEXT: ${{ toJson(job) }}
-#      run: echo "$JOB_CONTEXT"
-#    - name: Dump steps context
-#      env:
-#        STEPS_CONTEXT: ${{ toJson(steps) }}
-#      run: echo "$STEPS_CONTEXT"
-#    - name: Dump runner context
-#      env:
-#        RUNNER_CONTEXT: ${{ toJson(runner) }}
-#      run: echo "$RUNNER_CONTEXT"
-#    - name: Dump strategy context
-#      env:
-#        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-#      run: echo "$STRATEGY_CONTEXT"
-#    - name: Dump matrix context
-#      env:
-#        MATRIX_CONTEXT: ${{ toJson(matrix) }}
-#      run: echo "$MATRIX_CONTEXT"
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+    - name: Dump job context
+      env:
+        JOB_CONTEXT: ${{ toJson(job) }}
+      run: echo "$JOB_CONTEXT"
+    - name: Dump steps context
+      env:
+        STEPS_CONTEXT: ${{ toJson(steps) }}
+      run: echo "$STEPS_CONTEXT"
+    - name: Dump runner context
+      env:
+        RUNNER_CONTEXT: ${{ toJson(runner) }}
+      run: echo "$RUNNER_CONTEXT"
+    - name: Dump strategy context
+      env:
+        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+      run: echo "$STRATEGY_CONTEXT"
+    - name: Dump matrix context
+      env:
+        MATRIX_CONTEXT: ${{ toJson(matrix) }}
+      run: echo "$MATRIX_CONTEXT"
 
 
 #    - name: Create release
