--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,6 +25,13 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
+    - name: Setup environment
+      run: echo ::set-env name=INPUT_TAG::"v6.6.6"
+
+    - uses: meeDamian/github-release@1.0
+      with:
+        token: ${{secrets.GITHUB_TOKEN}}
+
 #    - name: Try preparing env
 #      id: env
 #      run: |
@@ -33,39 +40,39 @@ jobs:
 #
 #    - name: Check job env var
 #      run: echo ${{steps.env.outputs.version}}
-    - name: Setup environment
-      run: |
-        echo ::set-env name=DOCKER_USER::"${GITHUB_ACTOR,,}"
-        echo ::set-env name=COMMIT_HASH::"${GITHUB_SHA:0:16}"
-        echo ::set-env name=SLUG::"$(echo "${GITHUB_REPOSITORY,,}" | sed 's/docker-//')"
+#    - name: Setup environment
+#      run: |
+#        echo ::set-env name=DOCKER_USER::"${GITHUB_ACTOR,,}"
+#        echo ::set-env name=COMMIT_HASH::"${GITHUB_SHA:0:16}"
+#        echo ::set-env name=SLUG::"$(echo "${GITHUB_REPOSITORY,,}" | sed 's/docker-//')"
 
-    - name: dsaaaaaaaaaa
-      run: echo "~~ ${{DOCKER_USER}} ~~ ${{SLUG}} ~~"
-
-    - name: Dump GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
-    - name: Dump job context
-      env:
-        JOB_CONTEXT: ${{ toJson(job) }}
-      run: echo "$JOB_CONTEXT"
-    - name: Dump steps context
-      env:
-        STEPS_CONTEXT: ${{ toJson(steps) }}
-      run: echo "$STEPS_CONTEXT"
-    - name: Dump runner context
-      env:
-        RUNNER_CONTEXT: ${{ toJson(runner) }}
-      run: echo "$RUNNER_CONTEXT"
-    - name: Dump strategy context
-      env:
-        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-      run: echo "$STRATEGY_CONTEXT"
-    - name: Dump matrix context
-      env:
-        MATRIX_CONTEXT: ${{ toJson(matrix) }}
-      run: echo "$MATRIX_CONTEXT"
+#    - name: dsaaaaaaaaaa
+#      run: echo "~~ ${{DOCKER_USER}} ~~ ${{SLUG}} ~~"
+#
+#    - name: Dump GitHub context
+#      env:
+#        GITHUB_CONTEXT: ${{ toJson(github) }}
+#      run: echo "$GITHUB_CONTEXT"
+#    - name: Dump job context
+#      env:
+#        JOB_CONTEXT: ${{ toJson(job) }}
+#      run: echo "$JOB_CONTEXT"
+#    - name: Dump steps context
+#      env:
+#        STEPS_CONTEXT: ${{ toJson(steps) }}
+#      run: echo "$STEPS_CONTEXT"
+#    - name: Dump runner context
+#      env:
+#        RUNNER_CONTEXT: ${{ toJson(runner) }}
+#      run: echo "$RUNNER_CONTEXT"
+#    - name: Dump strategy context
+#      env:
+#        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+#      run: echo "$STRATEGY_CONTEXT"
+#    - name: Dump matrix context
+#      env:
+#        MATRIX_CONTEXT: ${{ toJson(matrix) }}
+#      run: echo "$MATRIX_CONTEXT"
 
 
 #    - name: Create release
