--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -26,7 +26,9 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Setup environment
-      run: echo ::set-env name=INPUT_TAG::"v6.6.6"
+      run: |
+        echo "${GITHUB_REF}"
+        echo ::set-env name=INPUT_TAG::"v6.6.6"
 
     - uses: meeDamian/github-release@1.0
       with:
