test passing INPUT_TAG take 2

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -30,7 +30,7 @@ jobs:
         echo "${GITHUB_REF}"
         echo ::set-env name=INPUT_TAG::"v6.6.6"
 
-    - uses: meeDamian/github-release@1.0
+    - uses: meeDamian/github-release@635d8d8
       with:
         token: ${{secrets.GITHUB_TOKEN}}
 
