--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -29,10 +29,8 @@ jobs:
       run: |
         echo "${GITHUB_REF}"
         echo ::set-env name=GIT_TAG::"v6.6.6"
+        echo ::set-env name=MONKEY::"eats-bananas"
 
-    - uses: meeDamian/github-release@check-env
-      with:
-        token: ${{secrets.GITHUB_TOKEN}}
 
 #    - name: Try preparing env
 #      id: env
@@ -51,30 +49,30 @@ jobs:
 #    - name: dsaaaaaaaaaa
 #      run: echo "~~ ${{DOCKER_USER}} ~~ ${{SLUG}} ~~"
 #
-#    - name: Dump GitHub context
-#      env:
-#        GITHUB_CONTEXT: ${{ toJson(github) }}
-#      run: echo "$GITHUB_CONTEXT"
-#    - name: Dump job context
-#      env:
-#        JOB_CONTEXT: ${{ toJson(job) }}
-#      run: echo "$JOB_CONTEXT"
-#    - name: Dump steps context
-#      env:
-#        STEPS_CONTEXT: ${{ toJson(steps) }}
-#      run: echo "$STEPS_CONTEXT"
-#    - name: Dump runner context
-#      env:
-#        RUNNER_CONTEXT: ${{ toJson(runner) }}
-#      run: echo "$RUNNER_CONTEXT"
-#    - name: Dump strategy context
-#      env:
-#        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-#      run: echo "$STRATEGY_CONTEXT"
-#    - name: Dump matrix context
-#      env:
-#        MATRIX_CONTEXT: ${{ toJson(matrix) }}
-#      run: echo "$MATRIX_CONTEXT"
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+    - name: Dump job context
+      env:
+        JOB_CONTEXT: ${{ toJson(job) }}
+      run: echo "$JOB_CONTEXT"
+    - name: Dump steps context
+      env:
+        STEPS_CONTEXT: ${{ toJson(steps) }}
+      run: echo "$STEPS_CONTEXT"
+    - name: Dump runner context
+      env:
+        RUNNER_CONTEXT: ${{ toJson(runner) }}
+      run: echo "$RUNNER_CONTEXT"
+    - name: Dump strategy context
+      env:
+        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+      run: echo "$STRATEGY_CONTEXT"
+    - name: Dump matrix context
+      env:
+        MATRIX_CONTEXT: ${{ toJson(matrix) }}
+      run: echo "$MATRIX_CONTEXT"
 
 
 #    - name: Create release
