--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -49,6 +49,10 @@ jobs:
 #    - name: dsaaaaaaaaaa
 #      run: echo "~~ ${{DOCKER_USER}} ~~ ${{SLUG}} ~~"
 #
+    - name: Try DAT
+      if: ${{ ${MONKEY} == "eats-bananas" }}
+      run: echo "ok"
+
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
