--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -86,8 +86,8 @@ jobs:
           echo "|---------|------|------" >> ./all-stats
 
           for file in $(ls ./stats/*); do
-            VER="$(echo "${file}" | cut -d- -f1)"
-            ARCH="$(echo "${file}" | cut -d- -f2)"
+            VER="$(basename "${file}" | cut -d- -f1)"
+            ARCH="$(basename "${file}" | cut -d- -f2)"
             TIME="$(cat ${file} | tr -d '\n')"
             echo "| ${VER} | ${ARCH} | ${TIME}" >> ./all-stats
           done
