--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -32,7 +32,7 @@ jobs:
       run: touch /tmp/start
 
     - name: sleep
-      run: sleep 5
+      run: sleep 1
 
     - name: Calculate execution time
       run: |
@@ -87,16 +87,17 @@ jobs:
           echo "|---------|-----|---------|---------|---------" >> ./all-stats
 
           for ver in $(ls ./stats/* | awk -F/ '{print $NF}' | cut -d- -f1 | uniq); do
-            line="${ver}"
+            line="| ${ver}"
 
             line="${line} | $(cat ./stats/${ver}-arm | tr -d '\n')"
             line="${line} | $(cat ./stats/${ver}-aarch64 | tr -d '\n')"
             line="${line} | $(cat ./stats/${ver}-riscv32 | tr -d '\n')"
             line="${line} | $(cat ./stats/${ver}-riscv64 | tr -d '\n')"
-            
+
             echo "${line}" >> ./all-stats
           done
 
+          echo "~~~"
           cat ./all-stats
 
           echo ::set-env name=XXX::"$(cat ./all-stats)"
