--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -111,5 +111,5 @@ jobs:
               issue_number: 1,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for reporting!' + process.env.XXX
+              body: '👋 Thanks for reporting!\n' + process.env.XXX
             })
