--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -100,7 +100,7 @@ jobs:
           echo "~~~"
           cat ./all-stats
 
-          echo ::set-env name=XXX::"$(cat ./all-stats | sed -z 's/\n/\\n/g')"
+          echo ::set-env name=RESULTS::"$(cat ./all-stats | sed -z 's/\n/\\n/g')"
 
       - uses: actions/github-script@0.4.0
         with:
@@ -111,5 +111,5 @@ jobs:
               issue_number: 1,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for reporting!\n' + process.env.XXX.replace(/\\n/g, '\n')
+              body: `Today's results:\n\n${process.env.RESULTS.replace(/\\n/g, '\n')}`
             })
