--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Print ENV
       run: echo "${COMBO}"
 
-    - name: Log start time ${COMBO}
+    - name: Log start time ${{matrix.arch}}
       run: touch /tmp/start
 
     - name: sleep
