--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,13 +1,9 @@
 name: build
 
 on:
-  push:
-    branches:
-      - master
-    tags:
-      - '*'
-    schedule:
-      - cron: '*/5 * * * *'
+  - push:
+      branches: [ '*' ]
+  - pull_request
 
 jobs:
   build:
