--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,9 @@ jobs:
     name: build
     runs-on: ubuntu-latest
 
+    env:
+      VERSION: v9.9.9
+
     steps:
       - uses: actions/checkout@v2
 
