Fixed a bug in NoteLineCount... not seriously...

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      VERSION: v9.9.13
+      VERSION: v9.9.12
 
     steps:
       - uses: actions/checkout@v2
@@ -24,11 +24,12 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ env.VERSION }}
           name: ${{ env.VERSION }}
-#          gzip: false
+          allow_override: true
+          gzip: false
           body: |
-            Everything.
+            Everythinger.
 
             Absolutely everything ${{ env.VERSION }}.
-#          files: >
-#            aaa_bbb.txt:aaa/bbb
-#            aaa.tgz
+          files: >
+            aaa_bbb.txt:aaa/bbb
+            aaa.tgz
